--- a/codebook/package.json
+++ b/codebook/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^13.5.0",
+    "json-server": "^0.17.4",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-router-dom": "^6.30.3",
@@ -38,7 +39,6 @@
     ]
   },
   "devDependencies": {
-    "json-server": "^1.0.0-beta.5",
     "json-server-auth": "^2.1.0",
     "tailwindcss": "^3.4.19"
   }
